// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`custom-property-empty-line-before не ошибки индекс теста: 0 1`] = `
Array [
  Object {
    "column": 4,
    "endColumn": 16,
    "endLine": 6,
    "line": 6,
    "rule": "custom-property-empty-line-before",
    "severity": "error",
    "text": "Unexpected empty line before custom property (custom-property-empty-line-before)",
  },
]
`;

exports[`custom-property-empty-line-before не ошибки индекс теста: 0 2`] = `Array []`;

exports[`custom-property-empty-line-before ошибки индекс теста: 0 1`] = `
Array [
  Object {
    "column": 4,
    "endColumn": 16,
    "endLine": 3,
    "line": 3,
    "rule": "custom-property-empty-line-before",
    "severity": "error",
    "text": "Expected empty line before custom property (custom-property-empty-line-before)",
  },
]
`;

exports[`custom-property-empty-line-before ошибки индекс теста: 0 2`] = `Array []`;
